# naomi_streamlit

./: .env.example  .gitignore  .nixpacks.toml  Makefile  README.md  api.py  app.db  app.py  config_nginx.sh  dev_mode.py  env_to_streamlit_secrets.py  nginx.conf  pyproject.toml  railway.toml  utils.py
.streamlit/: config.toml
naomi/: Hello.py  agent.py  app.py  db.py  home.py  utils.py
naomi/assistant/: agent.py  persistence.py
naomi/chat/: assistant.py  chat.py  user_input.py
naomi/llm/: llm.py  stream_processing.py
naomi_streamlit/: home.py
naomi_streamlit/assistant/: agent.py  persistence.py
naomi_streamlit/chat/: assistant.py  chat.py  user_input.py
naomi_streamlit/settings/: agent_settings.py  db_settings.py  settings_tabs.py
pages/: 1_📈_Plotting_Demo.py  2_🌍_Mapping_Demo.py  3_📊_DataFrame_Demo.py  Settings.py  events.py  ⚙️Settings.py
tests/: conftest.py  data.py  matchers.py  test_agent.py  test_db.py  test_home.py  test_matchers.py  test_sanity.py  test_settings.py  test_utils.py
tests/assistant/: test_agent.py  test_persistence.py
tests/chat/: conftest.py  test_assistant.py  test_chat.py  test_user_input.py
tests/settings/: __init__.py  conftest.py  test_agents.py  test_base.py  test_database.py
