[tool.poetry]
name = "naomi_streamlit"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"
packages = [{include = "naomi_streamlit"}]

[tool.poetry.dependencies]
python = "^3.10"
llm = { git = "https://github.com/reubenjohn/llm_utils.git", rev = "cd875057a68444d8487ceaf4f4ba6bc74c7562be" }
openai = "^1.54.4"
python-dotenv = "^1.0.1"
swarm = { git = "https://github.com/openai/swarm.git", rev = "9db581cecaacea0d46a933d6453c312b034dbf47" }
instructor = "^1.6.4"
streamlit = "^1.42.0"
SQLAlchemy = "^2.0.36"
Authlib = "^1.4.1"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
mypy = "^1.13.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.1"
black = "^24.10.0"
coverage = "^7.6.4"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
