[tool.poetry]
name = "naomi_streamlit"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"
packages = [{include = "naomi_streamlit"}]

[tool.poetry.dependencies]
python = "^3.10"
naomi_core = { git = "https://github.com/reubenjohn/naomi_core.git", rev = "07dd61a2f4bc382699b6f94ae713d73599d1b1f7" }
streamlit = "^1.42.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
mypy = "^1.13.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.1"
black = "^24.10.0"
coverage = "^7.6.4"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
